--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 <main>
     Основное содержимое
 </main>
-<section>
+<aside>
     Боковая панель
-</section>
+</aside>
 <div class="contacts">
     Контактная панель
 </div>
