--- a/system.html
+++ b/system.html
@@ -100,7 +100,7 @@
 						<span class="transfer">Цель: </span>Создать виртуальную реальность с полным погружением<br>
 							<span class="transfer">Условия выполнения: </span>Создание виртуальной реальности с полным погружением<br>
 							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
-							<span class="transfer">Описание: </span>после просмотра аниме "Мастера меча онлайн" вы загорелись иддей создать нечто похожее на то, что создал Акихико Каяба. На горе должен остаться только один лев, а гений тут только я.
+							<span class="transfer">Описание: </span>после просмотра аниме "Мастера меча онлайн" вы загорелись идеей создать нечто похожее на то, что создал Акихико Каяба. На горе должен остаться только один лев, а гений тут только я.
 					</div>
 				</section>
 				<section>
@@ -116,9 +116,9 @@
 					<div class="information">
 						<span class="transfer">&lt;Из всех гений только я&gt;</span><br>
 						<span class="transfer">Цель: </span>Стать лучшим программистом в мире<br>
-							<span class="transfer">Условия выполнения: </span>Становление лучшим программистом в мире<br>
+							<span class="transfer">Условия выполнения: </span>Становление лучшим программистом мира<br>
 							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
-							<span class="transfer">Описание: </span>итак, вам понравилось программирование и вы выбрали его для себя как основной вид деятельности. Но выже гений, и стать лучше во всём для вас обязательно!
+							<span class="transfer">Описание: </span>итак, вам понравилось программирование и вы выбрали его для себя как основной вид деятельности. Но вы же гений, и стать лучшим во всём для вас обязательно!
 					</div>
 				</section>
 				<section>
@@ -127,7 +127,7 @@
 						<span class="transfer">Цель: </span>Создать систему "The gamer" в реальной жизни<br>
 							<span class="transfer">Условия выполнения: </span>Создание системы "The gamer" в дополненной реальности в реальной жизни<br>
 							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
-							<span class="transfer">Описание: </span>начитавшись фанфиков с системой геймер, вы решили воссоздать подобное в реальности. Так как вы гений, выполнения этой прихоти обязательно.
+							<span class="transfer">Описание: </span>начитавшись фанфиков с системой геймер, вы решили воссоздать подобное в реальности. Так как вы гений, выполнение этой прихоти обязательно.
 					</div>
 				</section>
 				<section>
@@ -151,9 +151,9 @@
 				<section>
 					<div class="information">
 						<span class="transfer">&lt;Гений я или погулять вышел?&gt;</span><br>
-						<span class="transfer">Цель: </span>Изучения английского и японского языка<br>
+						<span class="transfer">Цель: </span>Изучение английского и японского языка<br>
 							<span class="transfer">Условия выполнения: </span>свободная речь на английском и японском<br>
-							<span class="transfer">Временные рамки: </span>2,2 года(англиский до 20 лет), 12,2 года(японский до 30 лет)<br>
+							<span class="transfer">Временные рамки: </span>2,2 года(английский до 20 лет), 12,2 года(японский до 30 лет)<br>
 							<span class="transfer">Описание: </span>без английского никуда, а вот японский вам нужен для изучения японской культура. Как никак, вы уже к ней сильно сопричастны.
 					</div>
 				</section>
