--- a/index.html
+++ b/index.html
@@ -10,48 +10,50 @@
 	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 	<!-- Main css file -->
 	<link rel="stylesheet" href="css/main.css">
+	<!-- style.css css file -->
+	<link rel="stylesheet" href="css/style.css">
 	<!-- PT serif font -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
 </head>
 <body>
 <div class="wrapper">
-<header>
+<header id="header">
 	<!-- Header icon -->
 	<div class="logo">
 		<a href="#">
 			<picture>
-				<img src="img/logo.png" alt="#" class="logo-image">
+				<img src="img/logo.png" alt="Welfegor" class="logo-image">
 			</picture>
 		</a>
 	</div>
 	<!-- Start Navigation menu -->
 	<nav>
 		<ul>
-			<li><a href="index.html">
+			<li><a href="index.html" class="nav_home">
 				<picture>
 					<img src="img/h.png" alt="#">
 				</picture>
 				<span>Home</span>
 			</a></li>
-			<li><a href="portfolio.html">
+			<li><a href="portfolio.html" class="nav_portfolio">
 				<picture>
 					 <img src="img/p.png" alt="#">
 				</picture>
 				<span>Portfolio</span>
 			</a></li>
-			<li><a href="about.html">
+			<li><a href="about.html" class="nav_about">
 				<picture>
 					<img src="img/a.png" alt="#">
 				</picture>
 				<span>About</span>
 			</a></li>
-			<li><a href="contacts.html">
+			<li><a href="contacts.html" class="nav_contacts">
 				<picture>
 					<img src="img/c.png" alt="#">       
 				</picture>
 				<span>Contacts</span>
 			</a></li>
-			<li><a href="system.html">
+			<li><a href="system.html" class="nav_system">
 				<picture>
 					<img src="img/s.png" alt="#">
 				</picture>
@@ -66,16 +68,16 @@
 	</div>
 	<!-- End Header search panel -->
 </header>
-<main>
+<main id="main">
 	Основное содержимое
 </main>
-<aside>
+<aside id="aside">
 	Боковая панель
 </aside>
-<div class="contacts">
+<div id="contacts" class="contacts">
 	Контактная панель
 </div>
-<footer>
+<footer id="footer">
 	Подвал
 </footer>
 </div>
