--- a/system.html
+++ b/system.html
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 	<!-- Main css file -->
 	<link rel="stylesheet" href="css/main.css">
-	<!-- system.ccs css file -->
+	<!-- system.css css file -->
 	<link rel="stylesheet" href="css/system.css">
 	<!-- PT serif font -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
@@ -29,31 +29,31 @@
 	<!-- Start Navigation menu -->
 	<nav>
 		<ul>
-			<li><a href="index.html">
+			<li><a href="index.html" class="nav_home">
 				<picture>
 					<img src="img/h.png" alt="#">
 				</picture>
 				<span>Home</span>
 			</a></li>
-			<li><a href="portfolio.html">
+			<li><a href="portfolio.html" class="nav_portfolio">
 				<picture>
 					 <img src="img/p.png" alt="#">
 				</picture>
 				<span>Portfolio</span>
 			</a></li>
-			<li><a href="about.html">
+			<li><a href="about.html" class="nav_about">
 				<picture>
 					<img src="img/a.png" alt="#">
 				</picture>
 				<span>About</span>
 			</a></li>
-			<li><a href="contacts.html">
+			<li><a href="contacts.html" class="nav_contacts">
 				<picture>
 					<img src="img/c.png" alt="#">       
 				</picture>
 				<span>Contacts</span>
 			</a></li>
-			<li><a href="system.html">
+			<li><a href="system.html" class="nav_system">
 				<picture>
 					<img src="img/s.png" alt="#">
 				</picture>
