--- a/system.html
+++ b/system.html
@@ -88,7 +88,13 @@
 		<section>
 			<div class="information">
 				<span class="transfer">Особенность:</span>
-				&lt;Гений&gt; &lt;Классификатор&gt; &lt;Любимчик взрослых&gt; &lt;Спорщик&gt; &lt;Игрок&gt; &lt;Упорный&gt; &lt;Романтик&gt;
+				&lt;<span class="tooltip" data-title="Интеллектуальный потенциал? Нерешаемые задачи? Для вас эти слова ничего не значат.">Гений</span>&gt;
+				&lt;<span class="tooltip" data-title="Почти что навязчивая идея всё классифицировать.">Классификатор</span>&gt;
+				&lt;<span class="tooltip" data-title="Вы ощущаете себя комфортно в любой социальной группе, состоящей из взрослых.">Любимчик взрослых</span>&gt;
+				&lt;<span class="tooltip" data-title="Вы побеждаете в любом споре. Не действует, если параметр 'интеллект' у вашего соперника на 15+ больше, чем ваш.">Спорщик</span>&gt;
+				&lt;<span class="tooltip" data-title="Пассивный навык, позволяющий игроку сохранять спокойствие в любой ситуации. Даёт иммунитет к ментальным атакам.">Разум игрока</span>&gt;
+				&lt;<span class="tooltip" data-title="Вас трудно заинтересовать, но если получится, то вас невозможно остановить в изучении объекта интереса.">Упорный</span>&gt;
+				&lt;<span class="tooltip" data-title="Вымирающий вид людей. Измена вашему партнёру карается смертью.">Моногамия</span>&gt;
 			</div>
 		</section>
 		<section>
