--- a/system.html
+++ b/system.html
@@ -70,13 +70,13 @@
 </header>
 <main>
 	<div class="window">
-		<section>
+		<div class="section">
 			<div class="information">
 				Истинное имя: Марат<br>
 				Выбранное имя: Вельфегор
 			</div>
-		</section>
-		<section>
+		</div>
+		<div class="section">
 			<div class="information">
 				Сила: 97<br>
 				Ловкость: 92<br>
@@ -84,8 +84,8 @@
 				Интеллект: 134<br>
 				Мудрость: 119
 			</div>
-		</section>
-		<section>
+		</div>
+		<div class="section">
 			<div class="information">
 				<span class="transfer">Особенность:</span>
 				&lt;<span class="tooltip" data-title="Интеллектуальный потенциал? Нерешаемые задачи? Для вас эти слова ничего не значат.">Гений</span>&gt;
@@ -96,11 +96,11 @@
 				&lt;<span class="tooltip" data-title="Вас трудно заинтересовать, но если получится, то вас невозможно остановить в изучении объекта интереса.">Упорный</span>&gt;
 				&lt;<span class="tooltip" data-title="Вымирающий вид людей. Измена вашему партнёру карается смертью.">Моногамия</span>&gt;
 			</div>
-		</section>
-		<section>
+		</div>
+		<div class="section">
 			<div class="information">
 				<span class="transfer">Задания:</span>
-				<section>
+				<div class="section">
 					<div class="information">
 						<span class="transfer">&lt;А я чем хуже?&gt;</span><br>
 						<span class="transfer">Цель: </span>Создать виртуальную реальность с полным погружением<br>
@@ -108,8 +108,8 @@
 							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
 							<span class="transfer">Описание: </span>после просмотра аниме "Мастера меча онлайн" вы загорелись идеей создать нечто похожее на то, что создал Акихико Каяба. На горе должен остаться только один лев, а гений тут только я.
 					</div>
-				</section>
-				<section>
+				</div>
+				<div class="section">
 					<div class="information">
 						<span class="transfer">&lt;Личинка человека&gt;</span><br>
 						<span class="transfer">Цель: </span>Стать студентом<br>
@@ -117,8 +117,8 @@
 							<span class="transfer">Временные рамки: </span>75/80/90 дней<br>
 							<span class="transfer">Описание: </span>пора явить ваш гений миру, и надо с чего-то начинать. Поступите во ВГУЭС для получения начальных знаний.
 					</div>
-				</section>
-				<section>
+				</div>
+				<div class="section">
 					<div class="information">
 						<span class="transfer">&lt;Из всех гений только я&gt;</span><br>
 						<span class="transfer">Цель: </span>Стать лучшим программистом в мире<br>
@@ -126,8 +126,8 @@
 							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
 							<span class="transfer">Описание: </span>итак, вам понравилось программирование и вы выбрали его для себя как основной вид деятельности. Но вы же гений, и стать лучшим во всём для вас обязательно!
 					</div>
-				</section>
-				<section>
+				</div>
+				<div class="section">
 					<div class="information">
 						<span class="transfer">&lt;Реальный геймер&gt;</span><br>
 						<span class="transfer">Цель: </span>Создать систему "The gamer" в реальной жизни<br>
@@ -135,8 +135,8 @@
 							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
 							<span class="transfer">Описание: </span>начитавшись фанфиков с системой геймер, вы решили воссоздать подобное в реальности. Так как вы гений, выполнение этой прихоти обязательно.
 					</div>
-				</section>
-				<section>
+				</div>
+				<div class="section">
 					<div class="information">
 						<span class="transfer">&lt;Интеллектуал&gt;</span><br>
 						<span class="transfer">Цель: </span>Прочитать всех выдающихся философов<br>
@@ -144,8 +144,8 @@
 							<span class="transfer">Временные рамки: </span>7,2 года (до 25 лет)<br>
 							<span class="transfer">Описание: </span>все умные люди, которых вы знаете, интересуются философией. Так как вы гений, то и общаться хотите с умнейшими людьми, а без знания философии это невозможно.
 					</div>
-				</section>
-				<section>
+				</div>
+				<div class="section">
 					<div class="information">
 						<span class="transfer">&lt;With facts and logic&gt;</span><br>
 						<span class="transfer">Цель: </span>Изучить логику<br>
@@ -153,8 +153,8 @@
 							<span class="transfer">Временные рамки: </span>2,2 года (до 20 лет)<br>
 							<span class="transfer">Описание: </span>вы гений, и мыслите гениально и логично и без знания логики, но знать бы её не помешало.
 					</div>
-				</section>
-				<section>
+				</div>
+				<div class="section">
 					<div class="information">
 						<span class="transfer">&lt;Гений я или погулять вышел?&gt;</span><br>
 						<span class="transfer">Цель: </span>Изучение английского и японского языка<br>
@@ -162,8 +162,8 @@
 							<span class="transfer">Временные рамки: </span>2,2 года(английский до 20 лет), 12,2 года(японский до 30 лет)<br>
 							<span class="transfer">Описание: </span>без английского никуда, а вот японский вам нужен для изучения японской культура. Как никак, вы уже к ней сильно сопричастны.
 					</div>
-				</section>
-				<section>
+				</div>
+				<div class="section">
 					<div class="information">
 						<span class="transfer">&lt;Начало легенды&gt;</span><br>
 						<span class="transfer">Цель: </span>Явить свою светлость миру<br>
@@ -171,9 +171,9 @@
 							<span class="transfer">Временные рамки: </span>до 18 марта(2,5 дня)<br>
 							<span class="transfer">Описание: </span>все, даже гении должны с чего-то начинать. Вы начнёте с изучения математики и информатики.
 					</div>
-				</section>
+				</div>
 			</div>
-		</section>
+		</div>
 	</div>
 </main>
 <aside>
