--- a/system.html
+++ b/system.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="wrapper">
-<header id="header">
+<header>
 	<!-- Header icon -->
 	<div class="logo">
 		<a href="#">
@@ -68,21 +68,26 @@
 	</div>
 	<!-- End Header search panel -->
 </header>
-<main id="main">
+<main>
 	<div class="window">
 		<div class="section">
-			Истинное имя: Марат<br>
-			Выбранное имя: Вельфегор
+			<div class="information">
+				Истинное имя: Марат<br>
+				Выбранное имя: Вельфегор
+			</div>
 		</div>
 		<div class="section">
-			Сила: 97<br>
-			Ловкость: 92<br>
-			Выносливость: 104<br>
-			Интеллект: 134<br>
-			Мудрость: 119
+			<div class="information">
+				Сила: 97<br>
+				Ловкость: 92<br>
+				Выносливость: 104<br>
+				Интеллект: 134<br>
+				Мудрость: 119
+			</div>
 		</div>
 		<div class="section">
-			<span class="transfer">Особенность:</span>
+			<div class="information">
+				<span class="transfer">Особенность:</span>
 				&lt;<span class="tooltip" data-title="Интеллектуальный потенциал? Нерешаемые задачи? Для вас эти слова ничего не значат.">Гений</span>&gt;
 				&lt;<span class="tooltip" data-title="Почти что навязчивая идея всё классифицировать.">Классификатор</span>&gt;
 				&lt;<span class="tooltip" data-title="Вы ощущаете себя комфортно в любой социальной группе, состоящей из взрослых.">Любимчик взрослых</span>&gt;
@@ -90,76 +95,95 @@
 				&lt;<span class="tooltip" data-title="Пассивный навык, позволяющий игроку сохранять спокойствие в любой ситуации. Даёт иммунитет к ментальным атакам.">Разум игрока</span>&gt;
 				&lt;<span class="tooltip" data-title="Вас трудно заинтересовать, но если получится, то вас невозможно остановить в изучении объекта интереса.">Упорный</span>&gt;
 				&lt;<span class="tooltip" data-title="Вымирающий вид людей. Измена вашему партнёру карается смертью.">Моногамия</span>&gt;
+			</div>
 		</div>
 		<div class="section">
-			<span class="transfer">Задания:</span>
-			<div class="section">
-				<span class="transfer">&lt;А я чем хуже?&gt;</span><br>
-					<span class="transfer">Цель: </span>Создать виртуальную реальность с полным погружением<br>
-					<span class="transfer">Условия выполнения: </span>Создание виртуальной реальности с полным погружением<br>
-					<span class="transfer">Временные рамки: </span>время жизни(??)<br>
-					<span class="transfer">Описание: </span>после просмотра аниме "Мастера меча онлайн" вы загорелись идеей создать нечто похожее на то, что создал Акихико Каяба. На горе должен остаться только один лев, а гений тут только я.
-			</div>
-			<div class="section">
-				<span class="transfer">&lt;Личинка человека&gt;</span><br>
-					<span class="transfer">Цель: </span>Стать студентом<br>
-					<span class="transfer">Условия выполнения: </span>Сдача ЕГЭ на 240+ баллов и поступление во ВГУЭС<br>
-					<span class="transfer">Временные рамки: </span>75/80/90 дней<br>
-					<span class="transfer">Описание: </span>пора явить ваш гений миру, и надо с чего-то начинать. Поступите во ВГУЭС для получения начальных знаний.
-			</div>
-			<div class="section">
-				<span class="transfer">&lt;Из всех гений только я&gt;</span><br>
-					<span class="transfer">Цель: </span>Стать лучшим программистом в мире<br>
-					<span class="transfer">Условия выполнения: </span>Становление лучшим программистом мира<br>
-					<span class="transfer">Временные рамки: </span>время жизни(??)<br>
-					<span class="transfer">Описание: </span>итак, вам понравилось программирование и вы выбрали его для себя как основной вид деятельности. Но вы же гений, и стать лучшим во всём для вас обязательно!
-			</div>
-			<div class="section">
-				<span class="transfer">&lt;Реальный геймер&gt;</span><br>
-				<span class="transfer">Цель: </span>Создать систему "The gamer" в реальной жизни<br>
-					<span class="transfer">Условия выполнения: </span>Создание системы "The gamer" в дополненной реальности в реальной жизни<br>
-					<span class="transfer">Временные рамки: </span>время жизни(??)<br>
-					<span class="transfer">Описание: </span>начитавшись фанфиков с системой геймер, вы решили воссоздать подобное в реальности. Так как вы гений, выполнение этой прихоти обязательно.
-			</div>
-			<div class="section">
-				<span class="transfer">&lt;Интеллектуал&gt;</span><br>
-				<span class="transfer">Цель: </span>Прочитать всех выдающихся философов<br>
-					<span class="transfer">Условия выполнения: </span>Прочтение всех выдающихся философов<br>
-					<span class="transfer">Временные рамки: </span>7,2 года (до 25 лет)<br>
-					<span class="transfer">Описание: </span>все умные люди, которых вы знаете, интересуются философией. Так как вы гений, то и общаться хотите с умнейшими людьми, а без знания философии это невозможно.
-			</div>
-			<div class="section">
-				<span class="transfer">&lt;With facts and logic&gt;</span><br>
-				<span class="transfer">Цель: </span>Изучить логику<br>
-					<span class="transfer">Условия выполнения: </span>Изучение рездела математики логики<br>
-					<span class="transfer">Временные рамки: </span>2,2 года (до 20 лет)<br>
-					<span class="transfer">Описание: </span>вы гений, и мыслите гениально и логично и без знания логики, но знать бы её не помешало.
-			</div>
-			<div class="section">
-				<span class="transfer">&lt;Гений я или погулять вышел?&gt;</span><br>
-				<span class="transfer">Цель: </span>Изучение английского и японского языка<br>
-					<span class="transfer">Условия выполнения: </span>свободная речь на английском и японском<br>
-					<span class="transfer">Временные рамки: </span>2,2 года(английский до 20 лет), 12,2 года(японский до 30 лет)<br>
-					<span class="transfer">Описание: </span>без английского никуда, а вот японский вам нужен для изучения японской культура. Как никак, вы уже к ней сильно сопричастны.
-			</div>
-			<div class="section">
-				<span class="transfer">&lt;Начало легенды&gt;</span><br>
-				<span class="transfer">Цель: </span>Явить свою светлость миру<br>
-					<span class="transfer">Условия выполнения: </span>прорешать все 8 номера по математике и все 3, 4, 5 номера по информатике<br>
-					<span class="transfer">Временные рамки: </span>до 18 марта(2,5 дня)<br>
-					<span class="transfer">Описание: </span>все, даже гении должны с чего-то начинать. Вы начнёте с изучения математики и информатики.
+			<div class="information">
+				<span class="transfer">Задания:</span>
+				<div class="section">
+					<div class="information">
+						<span class="transfer">&lt;А я чем хуже?&gt;</span><br>
+						<span class="transfer">Цель: </span>Создать виртуальную реальность с полным погружением<br>
+							<span class="transfer">Условия выполнения: </span>Создание виртуальной реальности с полным погружением<br>
+							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
+							<span class="transfer">Описание: </span>после просмотра аниме "Мастера меча онлайн" вы загорелись идеей создать нечто похожее на то, что создал Акихико Каяба. На горе должен остаться только один лев, а гений тут только я.
+					</div>
+				</div>
+				<div class="section">
+					<div class="information">
+						<span class="transfer">&lt;Личинка человека&gt;</span><br>
+						<span class="transfer">Цель: </span>Стать студентом<br>
+							<span class="transfer">Условия выполнения: </span>Сдача ЕГЭ на 240+ баллов и поступление во ВГУЭС<br>
+							<span class="transfer">Временные рамки: </span>75/80/90 дней<br>
+							<span class="transfer">Описание: </span>пора явить ваш гений миру, и надо с чего-то начинать. Поступите во ВГУЭС для получения начальных знаний.
+					</div>
+				</div>
+				<div class="section">
+					<div class="information">
+						<span class="transfer">&lt;Из всех гений только я&gt;</span><br>
+						<span class="transfer">Цель: </span>Стать лучшим программистом в мире<br>
+							<span class="transfer">Условия выполнения: </span>Становление лучшим программистом мира<br>
+							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
+							<span class="transfer">Описание: </span>итак, вам понравилось программирование и вы выбрали его для себя как основной вид деятельности. Но вы же гений, и стать лучшим во всём для вас обязательно!
+					</div>
+				</div>
+				<div class="section">
+					<div class="information">
+						<span class="transfer">&lt;Реальный геймер&gt;</span><br>
+						<span class="transfer">Цель: </span>Создать систему "The gamer" в реальной жизни<br>
+							<span class="transfer">Условия выполнения: </span>Создание системы "The gamer" в дополненной реальности в реальной жизни<br>
+							<span class="transfer">Временные рамки: </span>время жизни(??)<br>
+							<span class="transfer">Описание: </span>начитавшись фанфиков с системой геймер, вы решили воссоздать подобное в реальности. Так как вы гений, выполнение этой прихоти обязательно.
+					</div>
+				</div>
+				<div class="section">
+					<div class="information">
+						<span class="transfer">&lt;Интеллектуал&gt;</span><br>
+						<span class="transfer">Цель: </span>Прочитать всех выдающихся философов<br>
+							<span class="transfer">Условия выполнения: </span>Прочтение всех выдающихся философов<br>
+							<span class="transfer">Временные рамки: </span>7,2 года (до 25 лет)<br>
+							<span class="transfer">Описание: </span>все умные люди, которых вы знаете, интересуются философией. Так как вы гений, то и общаться хотите с умнейшими людьми, а без знания философии это невозможно.
+					</div>
+				</div>
+				<div class="section">
+					<div class="information">
+						<span class="transfer">&lt;With facts and logic&gt;</span><br>
+						<span class="transfer">Цель: </span>Изучить логику<br>
+							<span class="transfer">Условия выполнения: </span>Изучение рездела математики логики<br>
+							<span class="transfer">Временные рамки: </span>2,2 года (до 20 лет)<br>
+							<span class="transfer">Описание: </span>вы гений, и мыслите гениально и логично и без знания логики, но знать бы её не помешало.
+					</div>
+				</div>
+				<div class="section">
+					<div class="information">
+						<span class="transfer">&lt;Гений я или погулять вышел?&gt;</span><br>
+						<span class="transfer">Цель: </span>Изучение английского и японского языка<br>
+							<span class="transfer">Условия выполнения: </span>свободная речь на английском и японском<br>
+							<span class="transfer">Временные рамки: </span>2,2 года(английский до 20 лет), 12,2 года(японский до 30 лет)<br>
+							<span class="transfer">Описание: </span>без английского никуда, а вот японский вам нужен для изучения японской культура. Как никак, вы уже к ней сильно сопричастны.
+					</div>
+				</div>
+				<div class="section">
+					<div class="information">
+						<span class="transfer">&lt;Начало легенды&gt;</span><br>
+						<span class="transfer">Цель: </span>Явить свою светлость миру<br>
+							<span class="transfer">Условия выполнения: </span>прорешать все 8 номера по математике и все 3, 4, 5 номера по информатике<br>
+							<span class="transfer">Временные рамки: </span>до 18 марта(2,5 дня)<br>
+							<span class="transfer">Описание: </span>все, даже гении должны с чего-то начинать. Вы начнёте с изучения математики и информатики.
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </main>
-<aside id="aside">
+<aside>
 	Боковая панель
 </aside>
-<div id="contacts" class="contacts">
+<div class="contacts">
 	Контактная панель
 </div>
-<footer id="footer">
-	Design by Welfegor
+<footer>
+	Подвал
 </footer>
 </div>
 </body>
