--- a/system.html
+++ b/system.html
@@ -83,7 +83,7 @@
 		</div>
 		<div class="section">
 			<span class="transfer">Особенность:</span>
-				&lt;<span class="tooltip" data-title="Интеллектуальный потенциал? Нерешаемые задачи? Для вас эти слова ничего не значат.">Гений</span>&gt;
+				&lt;<span class="tooltip" data-title="Интеллектуальный потенциал? Нерешаемые задачи? Для вас эти слова ничего не значат." onclick="alert('Click!');">Гений</span>&gt;
 				&lt;<span class="tooltip" data-title="Почти что навязчивая идея всё классифицировать.">Классификатор</span>&gt;
 				&lt;<span class="tooltip" data-title="Вы ощущаете себя комфортно в любой социальной группе, состоящей из взрослых.">Любимчик взрослых</span>&gt;
 				&lt;<span class="tooltip" data-title="Вы побеждаете в любом споре. Не действует, если параметр 'интеллект' у вашего соперника на 15+ больше, чем ваш.">Спорщик</span>&gt;
@@ -162,11 +162,5 @@
 	Design by Welfegor
 </footer>
 </div>
-<script>
-	alert("javasctipt works");
-	if ('ontouchstart' in window) {
-		alert("test №1");
-	}
-</script>
 </body>
 </html>
