--- a/system.html
+++ b/system.html
@@ -83,13 +83,13 @@
 		</div>
 		<div class="section">
 			<span class="transfer">Особенность:</span>
-				&lt;<span class="tooltip" data-title="Интеллектуальный потенциал? Нерешаемые задачи? Для вас эти слова ничего не значат." onclick="">Гений</span>&gt;
-				&lt;<span class="tooltip" data-title="Почти что навязчивая идея всё классифицировать.">Классификатор</span>&gt;
-				&lt;<span class="tooltip" data-title="Вы ощущаете себя комфортно в любой социальной группе, состоящей из взрослых.">Любимчик взрослых</span>&gt;
-				&lt;<span class="tooltip" data-title="Вы побеждаете в любом споре. Не действует, если параметр 'интеллект' у вашего соперника на 15+ больше, чем ваш.">Спорщик</span>&gt;
-				&lt;<span class="tooltip" data-title="Пассивный навык, позволяющий игроку сохранять спокойствие в любой ситуации. Даёт иммунитет к ментальным атакам.">Разум игрока</span>&gt;
-				&lt;<span class="tooltip" data-title="Вас трудно заинтересовать, но если получится, то вас невозможно остановить в изучении объекта интереса.">Упорный</span>&gt;
-				&lt;<span class="tooltip" data-title="Вымирающий вид людей. Измена вашему партнёру карается смертью.">Моногамия</span>&gt;
+				&lt;<span class="tooltip" onclick="" data-title="Интеллектуальный потенциал? Нерешаемые задачи? Для вас эти слова ничего не значат.">Гений</span>&gt;
+				&lt;<span class="tooltip" onclick="" data-title="Почти что навязчивая идея всё классифицировать.">Классификатор</span>&gt;
+				&lt;<span class="tooltip" onclick="" data-title="Вы ощущаете себя комфортно в любой социальной группе, состоящей из взрослых.">Любимчик взрослых</span>&gt;
+				&lt;<span class="tooltip" onclick="" data-title="Вы побеждаете в любом споре. Не действует, если параметр 'интеллект' у вашего соперника на 15+ больше, чем ваш.">Спорщик</span>&gt;
+				&lt;<span class="tooltip" onclick="" data-title="Пассивный навык, позволяющий игроку сохранять спокойствие в любой ситуации. Даёт иммунитет к ментальным атакам.">Разум игрока</span>&gt;
+				&lt;<span class="tooltip" onclick="" data-title="Вас трудно заинтересовать, но если получится, то вас невозможно остановить в изучении объекта интереса.">Упорный</span>&gt;
+				&lt;<span class="tooltip" onclick="" data-title="Вымирающий вид людей. Измена вашему партнёру карается смертью.">Моногамия</span>&gt;
 		</div>
 		<div class="section">
 			<span class="transfer">Задания:</span>
