--- a/system.html
+++ b/system.html
@@ -22,7 +22,7 @@
 	<div class="logo">
 		<a href="#">
 			<picture>
-				<img src="img/logo.png" alt="#" class="logo-image">
+				<img src="img/logo.png" alt="Welfegor" class="logo-image">
 			</picture>
 		</a>
 	</div>
@@ -153,7 +153,38 @@
 	</div>
 </main>
 <aside id="aside">
-	Боковая панель
+	<div class="window">
+		<div class="section">
+			<span class="transfer">Расписание(Будние дни):</span>
+			<ul>
+				<li><span class="transfer">5:30</span> Пробуждение, душ, завтрак (1 банан, 1 яйцо), чистка зубов.</li>
+				<li><span class="transfer">6:10</span> Учёба (ЕГЭ математика, ЕГЭ информатика).</li>
+				<li><span class="transfer">8:00</span> Сбор в школу (собрать портфель, одеться).</li>
+				<li><span class="transfer">8:20</span> Выход из дома.</li>
+				<li><span class="transfer">8:30</span> Школа, затем сторонние дела (просмотр видео, фильмов, чтеник книг и т.д.), еда (котлета, гарнир, 2 сырника, 1 яйцо, 1 кусок сыра).</li>
+				<li><span class="transfer">16:00</span> Программирование.</li>
+				<li><span class="transfer">17:00</span> Чтение книг.</li>
+				<li><span class="transfer">18:00</span> Английский язык.</li>
+				<li><span class="transfer">19:00</span> Тренировка</li>
+				<li><span class="transfer">19:45</span> Душ, чистка зубов.</li>
+				<li><span class="transfer">20:00</span> Сон.</li>
+			</ul>
+		</div>
+		<div class="section">
+			<span class="transfer">Расписание(Выходные):</span>
+			<ul>
+				<li><span class="transfer">5:30</span> Пробуждение, душ, завтрак (1 банан, 1 яйцо), чистка зубов.</li>
+				<li><span class="transfer">6:10</span> Учёба (ЕГЭ математика, ЕГЭ информатика).</li>
+				<li><span class="transfer">10:00</span> Сторонние дела (просмотр видео, фильмов, чтеник книг и т.д.), еда (котлета, гарнир, 2 сырника, 1 яйцо, 1 кусок сыра).</li>
+				<li><span class="transfer">14:00</span> Программирование.</li>
+				<li><span class="transfer">17:00</span> Чтение книг.</li>
+				<li><span class="transfer">18:00</span> Английский язык.</li>
+				<li><span class="transfer">19:00</span> Тренировка</li>
+				<li><span class="transfer">19:45</span> Душ, чистка зубов.</li>
+				<li><span class="transfer">20:00</span> Сон.</li>
+			</ul>
+		</div>
+	</div>
 </aside>
 <div id="contacts" class="contacts">
 	Контактная панель
