--- a/system.html
+++ b/system.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Welfegor Official</title>
 	<!-- Favicon file -->
-	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<!-- Main css file -->
 	<link rel="stylesheet" href="css/main.css">
 	<!-- system.css css file -->
@@ -22,7 +22,7 @@
 	<div class="logo">
 		<a href="#">
 			<picture>
-				<img src="img/logo.png" alt="Welfegor" class="logo-image">
+				<img src="img/logo.png" alt="#" class="logo-image">
 			</picture>
 		</a>
 	</div>
