--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Webnovel Pattern</title>
+	<title>Presentation</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:700,400,400i">
 </head>
 <body>
     <img src="img/gameTesterpdf_page-0001.jpg" alt="">
