--- a/index.html
+++ b/index.html
@@ -1,22 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Presentation</title>
-	<link rel="stylesheet" href="style.css">
+	<meta name="description" content="#">
+	<meta name="keywords" content="#">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Welfegor Official</title>
+	<!-- Favicon file -->
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<!-- Main css file -->
+	<link rel="stylesheet" href="css/main.css">
+	<!-- style.css css file -->
+	<link rel="stylesheet" href="css/style.css">
+	<!-- PT serif font -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
 </head>
 <body>
-    <img src="img/gameTesterpdf_page-0001.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0002.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0003.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0004.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0005.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0006.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0007.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0008.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0009.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0010.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0011.jpg" alt="">
-    <img src="img/gameTesterpdf_page-0012.jpg" alt="">
+<div class="wrapper">
+<header id="header">
+	<!-- Header icon -->
+	<div class="logo">
+		<a href="#">
+			<picture>
+				<img src="img/logo.png" alt="Welfegor" class="logo-image">
+			</picture>
+		</a>
+	</div>
+	<!-- Start Navigation menu -->
+	<nav>
+		<ul>
+			<li><a href="index.html" class="nav_home">
+				<picture>
+					<img src="img/h.png" alt="#">
+				</picture>
+				<span>Home</span>
+			</a></li>
+			<li><a href="portfolio.html" class="nav_portfolio">
+				<picture>
+					 <img src="img/p.png" alt="#">
+				</picture>
+				<span>Portfolio</span>
+			</a></li>
+			<li><a href="about.html" class="nav_about">
+				<picture>
+					<img src="img/a.png" alt="#">
+				</picture>
+				<span>About</span>
+			</a></li>
+			<li><a href="contacts.html" class="nav_contacts">
+				<picture>
+					<img src="img/c.png" alt="#">       
+				</picture>
+				<span>Contacts</span>
+			</a></li>
+			<li><a href="system.html" class="nav_system">
+				<picture>
+					<img src="img/s.png" alt="#">
+				</picture>
+				<span>System</span>
+			</a></li>
+		</ul>
+	</nav>
+	<!-- End Navigation menu -->
+	<!-- Start Header search panel -->
+	<div class="search">
+
+	</div>
+	<!-- End Header search panel -->
+</header>
+<main id="main">
+	Основное содержимое
+</main>
+<aside id="aside">
+	Боковая панель
+</aside>
+<div id="contacts" class="contacts">
+	Контактная панель
+</div>
+<footer id="footer">
+	Design by Welfegor
+</footer>
+</div>
 </body>
 </html>
